[package]
name = "GShovel"
version = "0.1.0"
edition = "2021"

[dependencies]
libmem = "4.4.0"
eframe = "0.26.2"
csv = "1.3.0"
chrono = "0.4.35"
rfd = "0.14.0"
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]


[lib]
name = "GameControl"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "main"
path = "src/main.rs"